Fix company team elements alignment

--- a/src/components/TeamElement/index.css
+++ b/src/components/TeamElement/index.css
@@ -92,9 +92,9 @@
   }
 }
 
-.description.margin {
+.root:nth-child(odd) > .description {
   @include Breakpoint-mobileOnly {
-    padding-left: $gutter;
+    padding-left: calc($gutter / 2);
   }
 }
 
